--- a/.gitignore
+++ b/.gitignore
@@ -90,6 +90,7 @@ web_modules/
 # Next.js build output
 .next
 out
+build
 
 # Nuxt.js build / generate output
 .nuxt
@@ -142,3 +143,5 @@ dist
 .svelte-kit
 
 # End of https://www.toptal.com/developers/gitignore/api/node
+StepByStepBuildGuild.docx
+StepByStepBuildGuild.docx
