--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "A social media application based on MERN (Mongo DB, Express, React, Node.js)\r Credit to the following course in Udemy: https://www.udemy.com/course/node-with-react-build-deploy-a-fullstack-web-application/",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon ./build/app.js",
     "dev": "nodemon -r tsconfig-paths/register src/app.ts | bunyan",
     "lint:check": "eslint \"src/**/*.ts\"",
     "lint:fix": "eslint \"src/**/*.ts\" --fix",
     "prettier:check": "prettier --check \"src/**/*.{ts,json}\"",
     "prettier:fix": "prettier --write \"src/**/*.{ts,json}\"",
+    "build": "ttsc -p .",
     "test": "echo \"Error: no test specified\" && exit 1"
-
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   "dependencies": {
     "@socket.io/redis-adapter": "^8.0.0",
     "bunyan": "^1.8.15",
+    "cloudinary": "^1.33.0",
     "compression": "^1.7.4",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
@@ -35,10 +37,13 @@
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
     "http-status-codes": "^2.2.0",
+    "joi": "^17.7.0",
     "mongoose": "^6.8.2",
     "redis": "^4.5.1",
     "socket.io": "^4.5.4",
-    "typescript": "^4.9.4"
+    "ttypescript": "^1.5.15",
+    "typescript": "^4.9.4",
+    "typescript-transform-paths": "^3.4.4"
   },
   "devDependencies": {
     "@types/bunyan": "^1.8.8",
