--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
   },
   "homepage": "https://github.com/sjchin88/MERN-socialappfullstack#readme",
   "dependencies": {
+    "@bull-board/express": "^4.10.0",
+    "@bull-board/ui": "^4.10.0",
     "@socket.io/redis-adapter": "^8.0.0",
+    "bcryptjs": "^2.4.3",
+    "bull": "^4.10.2",
     "bunyan": "^1.8.15",
     "cloudinary": "^1.33.0",
     "compression": "^1.7.4",
@@ -38,6 +42,8 @@
     "hpp": "^0.2.3",
     "http-status-codes": "^2.2.0",
     "joi": "^17.7.0",
+    "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^6.8.2",
     "redis": "^4.5.1",
     "socket.io": "^4.5.4",
@@ -46,12 +52,16 @@
     "typescript-transform-paths": "^3.4.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/bull": "^4.10.0",
     "@types/bunyan": "^1.8.8",
     "@types/compression": "^1.7.2",
     "@types/cookie-session": "^2.0.44",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/hpp": "^0.2.2",
+    "@types/jsonwebtoken": "^9.0.0",
+    "@types/lodash": "^4.14.191",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "eslint": "^8.31.0",
