--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,8 @@
       { "transform": "typescript-transform-paths", "afterDeclarations": true },
     ],                                                  /* Declaration to use transform-path*/
     "paths": {
+      "@auth/*": ["src/features/auth/*"],
+      "@user/*": ["src/features/user/*"],
       "@global/*": ["src/shared/globals/*"],
       "@service/*": ["src/shared/services/*"],
       "@socket/*": ["src/shared/sockets/*"],
