feat: feature/post-reactions-feature added

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/jest": "^29.2.5",
     "bcryptjs": "^2.4.3",
     "bull": "^4.10.2",
+    "bullmq": "^3.5.2",
     "bunyan": "^1.8.15",
     "cloudinary": "^1.33.0",
     "compression": "^1.7.4",
@@ -72,6 +73,7 @@
     "@types/jsonwebtoken": "^9.0.0",
     "@types/lodash": "^4.14.191",
     "@types/nodemailer": "^6.4.7",
+    "@types/redis-info": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "eslint": "^8.31.0",
