--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "lib": ["DOM","ES2015"],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
     "baseUrl": ".",                                  /* Specify the base directory to resolve non-relative module names. */
     "outDir": "./build",                                   /* Specify an output folder for all emitted files. Note: use this to save into the build file*/
-    "rootDir": "src",                                   /* save into src  */
+    "rootDir": ".",                                   /* save into src  */
     "strict": true,                                      /* Enable all strict type-checking options. */
     "noImplicitAny": true,                            /* Enable error reporting for expressions and declarations with an implied 'any' type. */
     "noUnusedLocals": false,                           /* Enable error reporting when local variables aren't read. */
@@ -38,6 +38,7 @@
       "@auth/*": ["src/features/auth/*"],
       "@user/*": ["src/features/user/*"],
       "@post/*": ["src/features/post/*"],
+      "@reaction/*": ["src/features/reactions/*"],
       "@global/*": ["src/shared/globals/*"],
       "@service/*": ["src/shared/services/*"],
       "@socket/*": ["src/shared/sockets/*"],
