--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@sendgrid/mail": "^7.7.0",
     "@socket.io/redis-adapter": "^8.0.0",
     "@types/jest": "^29.2.5",
+    "axios": "^1.2.2",
     "bcryptjs": "^2.4.3",
     "bull": "^4.10.2",
     "bullmq": "^3.5.2",
