--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+deployment/.terraform
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
@@ -79,6 +80,7 @@ web_modules/
 # dotenv environment variable files
 .env
 .env.development.local
+.env.development
 .env.test.local
 .env.production.local
 .env.production
