--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,7 @@ web_modules/
 # dotenv environment variable files
 .env
 .env.development.local
-.env.development
+.env.develop
 .env.test.local
 .env.production.local
 .env.production
